--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>Gráficos Vega-Lite</title>
+    <title>Gráficos Vega-Lite – Yasmin Silva</title>
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
   </head>
   <body style="font-family: sans-serif; margin: 40px;">
     <h1>Gráficos Vega-Lite – Yasmin Silva</h1>
-https://yasminsilvamfowl.github.io/datavis2025/
+
+    <p>
+      Página publicada no GitHub Pages:
+      <a href="https://yasminsilvamfowl.github.io/datavis2025/" target="_blank">
+        https://yasminsilvamfowl.github.io/datavis2025/
+      </a>
+    </p>
+
     <h2>Gráfico de Barras</h2>
     <div id="grafico_barras"></div>
 
