--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
   </head>
-  <body style="font-family: sans-serif; margin: 40px;">
+  <body style="font-family: sans-serif; margin: 40px;">Gráficos Vega-Lite – Yasmin Silva
+https://yasminsilvamfowl.github.io/datavis2025/
+Gráfico de Barras
+Gráfico de Dispersão
     <h1>Gráficos Vega-Lite – Yasmin Silva</h1>
 
     <p>
@@ -21,9 +24,18 @@
     <div id="grafico_barras"></div>
 
     <h2>Gráfico de Dispersão</h2>
-    <div id="grafico_dispersao"></div>
+    <div id="grafico_dispersao"></div>Gráficos Vega-Lite – Yasmin Silva
+https://yasminsilvamfowl.github.io/datavis2025/
+Gráfico de Barras
+Gráfico de Dispersão
 
-    <script type="text/javascript">
+    <script type="text/javascript">Gráficos Vega-Lite – Yasmin Silva
+https://yasminsilvamfowl.github.io/datavis2025/
+Gráfico de Barras
+Gráfico de DispersãoGráficos Vega-Lite – Yasmin Silva
+https://yasminsilvamfowl.github.io/datavis2025/
+Gráfico de Barras
+Gráfico de Dispersão
       // Gráfico 1: Barras
       vegaEmbed(
         '#grafico_barras',
