--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
   </head>
-  <body style="font-family: sans-serif; margin: 40px;">Gráficos Vega-Lite – Yasmin Silva
-https://yasminsilvamfowl.github.io/datavis2025/
-Gráfico de Barras
-Gráfico de Dispersão
+
+  <body style="font-family: sans-serif; margin: 40px;">
     <h1>Gráficos Vega-Lite – Yasmin Silva</h1>
 
     <p>
@@ -24,28 +22,19 @@ Gráfico de Dispersão
     <div id="grafico_barras"></div>
 
     <h2>Gráfico de Dispersão</h2>
-    <div id="grafico_dispersao"></div>Gráficos Vega-Lite – Yasmin Silva
-https://yasminsilvamfowl.github.io/datavis2025/
-Gráfico de Barras
-Gráfico de Dispersão
+    <div id="grafico_dispersao"></div>
 
-    <script type="text/javascript">Gráficos Vega-Lite – Yasmin Silva
-https://yasminsilvamfowl.github.io/datavis2025/
-Gráfico de Barras
-Gráfico de DispersãoGráficos Vega-Lite – Yasmin Silva
-https://yasminsilvamfowl.github.io/datavis2025/
-Gráfico de Barras
-Gráfico de Dispersão
+    <script type="text/javascript">
       // Gráfico 1: Barras
       vegaEmbed(
         '#grafico_barras',
-        'https://api.observablehq.com/d/387d9f690eae2c0e/graph.json?cell=grafico_barras'
+        'https://api.observablehq.com/d/387d9f690eae2c0e.js?v=3&cell=grafico_barras'
       );
 
       // Gráfico 2: Dispersão
       vegaEmbed(
         '#grafico_dispersao',
-        'https://api.observablehq.com/d/387d9f690eae2c0e/graph.json?cell=grafico_dispersao'
+        'https://api.observablehq.com/d/387d9f690eae2c0e.js?v=3&cell=grafico_dispersao'
       );
     </script>
   </body>
